fixed some dashboard layout issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,10 @@
 	margin-left: 10px;
 }
 
+.pollresults {
+	margin-top: 6px;
+}
+
 #footer {
 	position: fixed;
 	bottom: 0;
